--- a/scroll.css
+++ b/scroll.css
@@ -1,20 +1,30 @@
 html{overflow: hidden;}
- 
-html, body{width: 100%; height: 100%;}
- 
-.content{
-	width: 100%; height: 100%;
-	background-color: blueviolet;
-	
-	position: relative;
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
 }
-.content > h1{
-	position: absolute;
-    left: 50%;
- 
-	font-size: 20em;
-	font-weight: bold;
-	text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
- 
+
+.content {
+  width: 100%;
+  height: 100%;
+  background-color: blueviolet;
+  top: 0%;
+  left: 0%;
+  position: relative;
 }
-.content:nth-child(even){background-color: #333;}
+.content > h1 {
+  position: absolute;
+  width: 100%;
+  text-align: center;
+
+  font-size: 20em;
+  font-weight: bold;
+  text-shadow: 4px 4px 4px rgba(0, 0, 0, 0.6);
+}
+.content:nth-child(even) {
+  background-color: #333;
+}
