--- a/profile.css
+++ b/profile.css
@@ -13,7 +13,15 @@ body {
   background-color: #ece6cc10;
 }
 
-/* ///////////////// header ///////////////// */
+html {
+  overflow: hidden;
+}
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 
 .header {
   width: 100%;
@@ -45,15 +53,13 @@ body {
   padding: 0 10px 0 10px;
 }
 
-.header > ul > li > a{
+.header > ul > li > a {
   color: black;
 }
 
-/* ///////////////// main ///////////////// */
-
 .main {
   width: 100%;
-  margin: 80px auto;
+  margin: 100px auto;
   box-sizing: border-box;
 }
 
@@ -113,6 +119,98 @@ h3 {
   height: 125px;
   font-size: 18px;
   margin: 40px 30px;
+}
+
+/* ///////////////////////////////////////////////////////// */
+
+.main > .career {
+  width: 100%;
+  height: 100%;
+  margin: 180px auto;
+}
+
+.main > .career > h2 {
+  width: 100%;
+  height: 50px;
+  font-size: 40px;
+  text-align: center;
+}
+
+.main > .career > .career__list {
+  display: flex;
+  margin: 30px;
+}
+
+.main > .career > .career__list > ul {
+  width: 100%;
+  height: 450px;
+  margin: 0px 20px;
+  text-align: center;
+}
+
+.main > .career > .career__list > ul > h3 {
+  font-size: 25px;
+  margin: 10px;
+}
+.main > .career > .career__list > ul > h4 {
+  font-size: 16px;
+  margin: 10px;
+}
+
+.main > .career > .career__list > ul > div {
+  width: 300px;
+  height: 300px;
+  margin: auto;
+}
+
+.main > .career > .career__list > ul > div > img {
+  margin-top: 10px;
+  width: 90%;
+  height: 90%;
+  border-radius: 20px;
+}
+
+.main > .career > .career__list > ul > div > img:hover {
+  animation-name: image;
+  animation-duration: 2s;
+  /* animation-delay: 1s;
+  animation-iteration-count: 1; */
+}
+
+@keyframes image {
+  from {
+    height: 0%;
+  }
+  to {
+    height: 90%;
+  }
+}
+
+.main > .career > .career__list > ul > p {
+  margin: 10px;
+}
+
+/* ///////////////////////////////////////////////////////// */
+
+.main > .skill {
+  width: 100%;
+  height: 100%;
+  margin: 180px 0px;
+  display: flex;
+  margin-left: 20vw;
+}
+
+.main > .skill > #myChart {
+  width: 60vw;
+  height: 60vh;
+}
+
+/* ///////////////////////////////////////////////////////// */
+
+.main > .personal {
+  width: 100%;
+  height: 100%;
+  margin: 180px 0px;
 }
 
 /* ///////////////// footer ///////////////// */
