--- a/profile.css
+++ b/profile.css
@@ -26,7 +26,6 @@ body {
   position: fixed;
   top: 0px;
   left: 0px;
-  background-color: #ece6cc10;
 }
 
 .header > ul {
@@ -38,31 +37,27 @@ body {
 
 .header > ul > li {
   display: inline-block;
-  font-size: 20px;
-  font-weight: 700;
   list-style: none;
   cursor: pointer;
-  transition: background-color 300ms;
+  transition: color 300ms;
 }
 
 .header > ul > li:hover {
-  text-decoration: underline;
-  background-color: #ece6cc60;
-  padding: 0 10px 0 10px;
+  color: #615e5e;
 }
 
 .main {
   width: 100%;
-  height: calc(100vh - 180px);
-  margin: 100px auto;
   box-sizing: border-box;
+  padding-bottom: 80px;
 }
 
 .main > .profile {
   display: flex;
   width: 100%;
-  height: 100%;
-  background-color: beige;
+  height: calc(100vh - 180px);
+  border: 1px solid #000;
+  margin-top: 100px;
 }
 
 .main > .profile > .picture__box {
@@ -86,7 +81,8 @@ h3 {
 }
 
 .mian > .profile > .picture__box > p {
-  text-align: start;
+  text-align: left;
+  border: 1px solid #000;
 }
 
 .main > .profile > .info__box {
@@ -104,6 +100,7 @@ h3 {
 .main > .profile > .info__box > .img__box > div {
   width: 100%;
   height: 25%;
+  border: 1px solid #000;
 }
 
 .main > .profile > .info__box > .img__box > div > img {
@@ -124,28 +121,33 @@ h3 {
   font-size: 18px;
   padding-left: 5%;
   padding-top: 7.5%;
+  border: 1px solid #000;
 }
 
 /* ///////////////////////////////////////////////////////// */
 
 .main > .career {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: calc(100vh - 180px);
   margin: 180px auto;
-  background-color: aqua;
-  border: 2px dashed #000;
+  /* background-color: aqua; */
+  border: 1px solid #000;
+  margin-top: 180px;
 }
 
-.main > .career > h2 {
+.main > .career > p {
   width: 100%;
   height: 50px;
-  font-size: 40px;
+  font-size: 20px;
   text-align: center;
+  padding-top: 10px;
+  border: 1px solid #000;
 }
 
 .main > .career > .career__list {
   display: flex;
-  margin: 30px;
+  border: 1px solid #000;
 }
 
 .main > .career > .career__list > ul {
@@ -154,10 +156,6 @@ h3 {
   text-align: center;
 }
 
-.main > .career > .career__list > ul > h3 {
-  font-size: 25px;
-  margin: 10px;
-}
 .main > .career > .career__list > ul > h4 {
   font-size: 16px;
   margin: 10px;
@@ -170,7 +168,7 @@ h3 {
 }
 
 .main > .career > .career__list > ul > div > img {
-  margin:10px;
+  margin: 10px;
   width: 90%;
   height: 90%;
   border-radius: 20px;
@@ -179,10 +177,10 @@ h3 {
 
 @keyframes image {
   from {
-    transform:rotateY(30deg);
+    transform: rotateY(30deg);
   }
   to {
-    transform:rotateY(-30px);
+    transform: rotateY(-30px);
   }
 }
 
@@ -194,10 +192,12 @@ h3 {
 
 .main > .skill {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
+  height: calc(100vh - 180px);
   display: flex;
-  background-color: beige;
   margin: 180px auto;
+  border: 1px solid #000;
+  margin-top: 180px;
 }
 
 .main > .skill > #myChart {
@@ -210,9 +210,63 @@ h3 {
 
 .main > .personal {
   width: 100%;
-  height: 100%;
+  height: calc(100vh - 180px);
   text-align: center;
-  background-color: aqua;
+  border: 1px solid #000;
+}
+
+.main > .personal > .slide__page {
+  width: 960px;
+  height: 360px;
+  margin: auto;
+  transform: translate(0,20%);
+}
+
+main > .personal > .slide__page > .slide__wrapper {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+main > .personal > .slide__page > .slide__wrapper > .slides {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 1620px;
+  display: flex;
+}
+
+main > .personal > .slide__page > .slide__wrapper > .slides >li > img {
+  width: 300px;
+  height: 300px;
+}
+
+.slides > li:not(:last-child) {
+  float: left;
+  margin-right: 30px;
+}
+
+.controls {
+  width: 100%;
+  text-align: center;
+  display: flex;
+}
+
+.controls > p {
+  background-color: #333;
+  color: #fff;
+  padding: 10px 20px;
+  margin: 0px 10px;
+}
+
+.controls > p#prev {
+  float: left;
+}
+
+controls > p#next {
+  float: right;
 }
 
 /* ///////////////// footer ///////////////// */
