--- a/profile.css
+++ b/profile.css
@@ -118,9 +118,10 @@ h3 {
 .main > .profile > .info__box > .my__info > div {
   width: 100%;
   height: 25%;
+  display: flex;
+  align-items: center;
   font-size: 18px;
   padding-left: 5%;
-  padding-top: 7.5%;
   border: 1px solid #000;
 }
 
